force-app/main/default/objects/Widget__c/fields/CS_IsChecked__c.field-meta.xml
<CustomField>
    <fullName>CS_IsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auxiliary field to check if Value is porperly nested has been evaluated.</description>
    <label>IsChecked</label>
    <type>Checkbox</type>
</CustomField>