force-app/main/default/objects/Widget__c/fields/CS_IsProperlyNested__c.field-meta.xml
<CustomField>
    <fullName>CS_IsProperlyNested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Value field String is properly nested (Brackets)</description>
    <label>Is Properly Nested</label>
    <type>Checkbox</type>
</CustomField>