force-app/main/default/objects/Widget__c/fields/CS_Value__c.field-meta.xml
<CustomField>
    <fullName>CS_Value__c</fullName>
    <description>Text field that saves string information</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>